Configure: Minor Incident Rules Fixes (#1961)
* Drag-pad image not showing in FF

Issue before fix:
* The drag pad that the user sees and uses to drag the rows to reorder them was not appearing on FF

What changed:
* FF did not respect the 100% used previously. Changed to a fixed height and width instead.

* Default to group-into-incident for new rules

Issue before fix:
* We did not default to any specific rule action, but since classic defaults to group-into-incident, we should do this as well in Ember for new rules.

What changed:
* Added the new rule config to include action === 'GROUP_INTO-INCIDENT'

* CSS fixes

* Always provide default operator in rule-builder conditions

Issue before fix
* If you selected a new field in your rule-builder condition, any previously selected operator in the row would disappear. The classic version, however, would always default to the first value in the dropdown

What changed:
* The operator is now always reset on changing fields for a condition. It's reset to the first option in the dropdown. The dropdown options may change between selection of fields, but the first will be used in all cases.
* Also, setting the value of the condition to null on changing the field. This is also the way classic works.

* Improve display of scoring ranging

Issue before fix
* The display of the scoring ranging was not ideal. The inputs all had background colors like classic, but because of the different browser implementations of the number input, sometimes (particularly in chrome) it looked like these were not inputs that could be edited.

What changed:
* Added a color code to the left of the label instead so that the input fields look like input fields

* Test Added

Added a test for the handling of default operators for the condition field change action

* Fix test

--- a/configure/app/styles/configure/respond/aggregation-rules/_rule.scss
+++ b/configure/app/styles/configure/respond/aggregation-rules/_rule.scss
@@ -52,6 +52,7 @@
       color: $formInputLabelColor;
       @include rsa-font(header, small);
       text-transform: uppercase;
+      line-height: 1rem;
     }
     &.description {
       .rsa-form-textarea textarea {
@@ -71,12 +72,18 @@
         }
       }
     }
+    &.time-window .rsa-form-input input {
+      line-height: 2rem;
+    }
     &.group-by-fields, &.time-window, &.incident-categories, &.incident-assignee {
       width: 480px;
     }
     &.group-by-fields .input-error {
-      padding: rsa-whitespace() 0;
+      padding: 0;
       line-height: 20px;
+      text-transform: uppercase;
+      font-size: .85rem;
+      color: text-color(primary, lightest);
     }
     &.incident-title, &.incident-summary {
       width: 700px;
@@ -118,21 +125,28 @@
           display: inline-block;
           vertical-align: middle;
         }
+        .color-code {
+          display: inline-block;
+          height: 21px;
+          width: 6px;
+          border-radius: 4px;
+          vertical-align: middle;
+          &.critical {
+            background-color: background-color(accentOne)
+          }
+          &.high {
+            background-color: background-color(accentThree);
+          }
+          &.medium {
+            background-color: background-color(accentFour);
+          }
+          &.low {
+            background-color: background-color(accentTwo);
+          }
+        }
         .rsa-form-input {
           width: 50px;
           display: inline-block;
-          input.critical {
-            background-color: background-color(accentOne);
-          }
-          input.high {
-            background-color: background-color(accentThree);
-          }
-          input.medium {
-            background-color: background-color(accentFour);
-          }
-          input.low {
-            background-color: background-color(accentTwo);
-          }
         }
         .priority-score-error {
           color: text-color(accentOne, dark);
